Fixed viewRecipes and favorite btn alignmentg in cardContainer ; Removed recipe header text ; Wrapped search and filter in div

--- a/components/icons&Buttons/favorite.module.css
+++ b/components/icons&Buttons/favorite.module.css
@@ -4,6 +4,7 @@
   cursor: pointer;
   font-size: 24px; 
   transition: transform 0.2s ease-in-out;
+  margin: 0;
 }
 
 .favoriteEmpty {
