--- a/components/recipes/recipe-list.module.css
+++ b/components/recipes/recipe-list.module.css
@@ -29,6 +29,15 @@
     flex: 1;
 }
 
+.recipeOptions {
+    display: flex;
+    justify-content: space-between;
+}
+
+.viewRecipe {
+    margin: 0;
+}
+
 .cardTitle {
     font-size: 20px;
     color: #414040;
